# fast_zero_v2

./: .env.example  .gitignore  anotacoes_p_correcao.md  compose.yaml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 0bfaa65c7881_create_todos_table.py  608443006834_add_updated_at_field_to_users_table.py  7b92d990f019_add_relationship_todo_and_user.py  9a7158daaac4_add_created_at_updated_at_in_todos_table.py  e2c09143a364_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
